Update CREATE FINAL DATASET
Flatten the multiindex in columns

--- a/Trial1.ipynb
+++ b/Trial1.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "9ac0d41a-b3f1-4521-8db0-d1a521fb6d0d",
    "metadata": {},
    "outputs": [],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "f24fde75-b64d-42b8-8180-37e508cb3364",
    "metadata": {},
    "outputs": [],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "2535cdfe-4c21-4a98-a3b9-16e5bdefcfda",
    "metadata": {},
    "outputs": [
@@ -449,7 +449,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "bf96e804-96cb-41d3-84d0-18e2d2d1429e",
    "metadata": {},
    "outputs": [
@@ -637,7 +637,7 @@
        "[3 rows x 21 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "id": "15354e8a-bb64-4fb2-a5f1-2a6978312437",
    "metadata": {
     "tags": []
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "id": "12861f19-587b-48cc-afd7-925a49be7415",
    "metadata": {},
    "outputs": [
@@ -1086,7 +1086,7 @@
        "[10 rows x 21 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1120,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "id": "6e84c950-018a-49da-8060-69d0e47919e1",
    "metadata": {},
    "outputs": [
@@ -1137,57 +1137,35 @@
        "        vertical-align: top;\n",
        "    }\n",
        "\n",
-       "    .dataframe thead tr th {\n",
-       "        text-align: left;\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
-       "    <tr>\n",
+       "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>day</th>\n",
        "      <th>product_id</th>\n",
-       "      <th>Sale</th>\n",
-       "      <th>SalesAmountInEuro</th>\n",
-       "      <th colspan=\"2\" halign=\"left\">time_delay_for_conversion</th>\n",
-       "      <th>nb_clicks_1week</th>\n",
-       "      <th colspan=\"2\" halign=\"left\">product_price</th>\n",
-       "      <th>product_age_group</th>\n",
+       "      <th>Sale_size</th>\n",
+       "      <th>SalesAmountInEuro_sum</th>\n",
+       "      <th>time_delay_for_conversion_mean</th>\n",
+       "      <th>time_delay_for_conversion_median</th>\n",
+       "      <th>nb_clicks_1week_mean</th>\n",
+       "      <th>product_price_sum</th>\n",
+       "      <th>product_price_mean</th>\n",
+       "      <th>product_age_group_mean</th>\n",
        "      <th>...</th>\n",
-       "      <th>product_brand</th>\n",
-       "      <th>product_category(1)</th>\n",
-       "      <th>product_category(2)</th>\n",
-       "      <th>product_category(3)</th>\n",
-       "      <th>product_category(4)</th>\n",
-       "      <th>product_category(5)</th>\n",
-       "      <th>product_category(6)</th>\n",
-       "      <th>product_category(7)</th>\n",
-       "      <th>product_country</th>\n",
-       "      <th>product_title</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>size</th>\n",
-       "      <th>sum</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>median</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>sum</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>...</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>mean</th>\n",
+       "      <th>product_brand_mean</th>\n",
+       "      <th>product_category(1)_mean</th>\n",
+       "      <th>product_category(2)_mean</th>\n",
+       "      <th>product_category(3)_mean</th>\n",
+       "      <th>product_category(4)_mean</th>\n",
+       "      <th>product_category(5)_mean</th>\n",
+       "      <th>product_category(6)_mean</th>\n",
+       "      <th>product_category(7)_mean</th>\n",
+       "      <th>product_country_mean</th>\n",
+       "      <th>product_title_mean</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1437,75 +1415,106 @@
        "</div>"
       ],
       "text/plain": [
-       "          day product_id Sale SalesAmountInEuro time_delay_for_conversion  \\\n",
-       "                         size               sum                      mean   \n",
-       "0  2020-08-04       1068    2             580.0                   57369.0   \n",
-       "1  2020-08-04       2326    2             228.0                     986.0   \n",
-       "2  2020-08-05         19    2             254.0                  105006.0   \n",
-       "3  2020-08-05         32    2             178.0                     479.0   \n",
-       "4  2020-08-05        132    2             194.0                  479925.0   \n",
-       "5  2020-08-05        580    2             380.0                    1643.0   \n",
-       "6  2020-08-05        682    2             250.0                     424.0   \n",
-       "7  2020-08-05        734    2             300.0                   85069.0   \n",
-       "8  2020-08-05        785    2             256.0                     666.0   \n",
-       "9  2020-08-05       1074    2             222.0                     969.0   \n",
+       "          day  product_id  Sale_size  SalesAmountInEuro_sum  \\\n",
+       "0  2020-08-04        1068          2                  580.0   \n",
+       "1  2020-08-04        2326          2                  228.0   \n",
+       "2  2020-08-05          19          2                  254.0   \n",
+       "3  2020-08-05          32          2                  178.0   \n",
+       "4  2020-08-05         132          2                  194.0   \n",
+       "5  2020-08-05         580          2                  380.0   \n",
+       "6  2020-08-05         682          2                  250.0   \n",
+       "7  2020-08-05         734          2                  300.0   \n",
+       "8  2020-08-05         785          2                  256.0   \n",
+       "9  2020-08-05        1074          2                  222.0   \n",
        "\n",
-       "            nb_clicks_1week product_price        product_age_group  ...  \\\n",
-       "     median            mean           sum   mean              mean  ...   \n",
-       "0   57369.0             0.0         290.0  145.0               0.0  ...   \n",
-       "1     986.0             0.0         228.0  114.0               0.0  ...   \n",
-       "2  105006.0             3.0         254.0  127.0               1.0  ...   \n",
-       "3     479.0             5.0         178.0   89.0               0.0  ...   \n",
-       "4  479925.0             1.0         194.0   97.0               0.0  ...   \n",
-       "5    1643.0            26.0         380.0  190.0               0.0  ...   \n",
-       "6     424.0             0.0         190.0   95.0               0.0  ...   \n",
-       "7   85069.0             0.0         152.0   76.0               0.0  ...   \n",
-       "8     666.0             0.0         256.0  128.0               0.0  ...   \n",
-       "9     969.0             0.0         222.0  111.0               1.0  ...   \n",
+       "   time_delay_for_conversion_mean  time_delay_for_conversion_median  \\\n",
+       "0                         57369.0                           57369.0   \n",
+       "1                           986.0                             986.0   \n",
+       "2                        105006.0                          105006.0   \n",
+       "3                           479.0                             479.0   \n",
+       "4                        479925.0                          479925.0   \n",
+       "5                          1643.0                            1643.0   \n",
+       "6                           424.0                             424.0   \n",
+       "7                         85069.0                           85069.0   \n",
+       "8                           666.0                             666.0   \n",
+       "9                           969.0                             969.0   \n",
        "\n",
-       "  product_brand product_category(1) product_category(2) product_category(3)  \\\n",
-       "           mean                mean                mean                mean   \n",
-       "0         343.0                 0.0                13.0                 NaN   \n",
-       "1         379.0                 0.0                 6.0                42.0   \n",
-       "2         343.0                 0.0                13.0                 NaN   \n",
-       "3         343.0                 0.0                13.0                 NaN   \n",
-       "4         105.0                 0.0                13.0                 NaN   \n",
-       "5         343.0                 0.0                13.0                 NaN   \n",
-       "6         343.0                 0.0                13.0                 NaN   \n",
-       "7         707.0                 0.0                 3.0                15.0   \n",
-       "8         343.0                 0.0                13.0                 NaN   \n",
-       "9         791.0                 0.0                13.0                 NaN   \n",
+       "   nb_clicks_1week_mean  product_price_sum  product_price_mean  \\\n",
+       "0                   0.0              290.0               145.0   \n",
+       "1                   0.0              228.0               114.0   \n",
+       "2                   3.0              254.0               127.0   \n",
+       "3                   5.0              178.0                89.0   \n",
+       "4                   1.0              194.0                97.0   \n",
+       "5                  26.0              380.0               190.0   \n",
+       "6                   0.0              190.0                95.0   \n",
+       "7                   0.0              152.0                76.0   \n",
+       "8                   0.0              256.0               128.0   \n",
+       "9                   0.0              222.0               111.0   \n",
        "\n",
-       "  product_category(4) product_category(5) product_category(6)  \\\n",
-       "                 mean                mean                mean   \n",
-       "0                 NaN                 NaN                 NaN   \n",
-       "1                 NaN                 NaN                 NaN   \n",
-       "2                 NaN                 NaN                 NaN   \n",
-       "3                 NaN                 NaN                 NaN   \n",
-       "4                 NaN                 NaN                 NaN   \n",
-       "5                 NaN                 NaN                 NaN   \n",
-       "6                 NaN                 NaN                 NaN   \n",
-       "7                 NaN                 NaN                 NaN   \n",
-       "8                 NaN                 NaN                 NaN   \n",
-       "9                 NaN                 NaN                 NaN   \n",
+       "   product_age_group_mean  ...  product_brand_mean  product_category(1)_mean  \\\n",
+       "0                     0.0  ...               343.0                       0.0   \n",
+       "1                     0.0  ...               379.0                       0.0   \n",
+       "2                     1.0  ...               343.0                       0.0   \n",
+       "3                     0.0  ...               343.0                       0.0   \n",
+       "4                     0.0  ...               105.0                       0.0   \n",
+       "5                     0.0  ...               343.0                       0.0   \n",
+       "6                     0.0  ...               343.0                       0.0   \n",
+       "7                     0.0  ...               707.0                       0.0   \n",
+       "8                     0.0  ...               343.0                       0.0   \n",
+       "9                     1.0  ...               791.0                       0.0   \n",
        "\n",
-       "  product_category(7) product_country product_title  \n",
-       "                 mean            mean          mean  \n",
-       "0                 NaN               0        1895.0  \n",
-       "1                 NaN               0         583.0  \n",
-       "2                 NaN               0         260.0  \n",
-       "3                 NaN               0        1038.0  \n",
-       "4                 NaN               0         211.0  \n",
-       "5                 NaN               0         357.0  \n",
-       "6                 NaN               0        1304.0  \n",
-       "7                 NaN               0        1328.0  \n",
-       "8                 NaN               0        1377.0  \n",
-       "9                 NaN               0         192.0  \n",
+       "   product_category(2)_mean  product_category(3)_mean  \\\n",
+       "0                      13.0                       NaN   \n",
+       "1                       6.0                      42.0   \n",
+       "2                      13.0                       NaN   \n",
+       "3                      13.0                       NaN   \n",
+       "4                      13.0                       NaN   \n",
+       "5                      13.0                       NaN   \n",
+       "6                      13.0                       NaN   \n",
+       "7                       3.0                      15.0   \n",
+       "8                      13.0                       NaN   \n",
+       "9                      13.0                       NaN   \n",
+       "\n",
+       "   product_category(4)_mean  product_category(5)_mean  \\\n",
+       "0                       NaN                       NaN   \n",
+       "1                       NaN                       NaN   \n",
+       "2                       NaN                       NaN   \n",
+       "3                       NaN                       NaN   \n",
+       "4                       NaN                       NaN   \n",
+       "5                       NaN                       NaN   \n",
+       "6                       NaN                       NaN   \n",
+       "7                       NaN                       NaN   \n",
+       "8                       NaN                       NaN   \n",
+       "9                       NaN                       NaN   \n",
+       "\n",
+       "   product_category(6)_mean  product_category(7)_mean  product_country_mean  \\\n",
+       "0                       NaN                       NaN                     0   \n",
+       "1                       NaN                       NaN                     0   \n",
+       "2                       NaN                       NaN                     0   \n",
+       "3                       NaN                       NaN                     0   \n",
+       "4                       NaN                       NaN                     0   \n",
+       "5                       NaN                       NaN                     0   \n",
+       "6                       NaN                       NaN                     0   \n",
+       "7                       NaN                       NaN                     0   \n",
+       "8                       NaN                       NaN                     0   \n",
+       "9                       NaN                       NaN                     0   \n",
+       "\n",
+       "   product_title_mean  \n",
+       "0              1895.0  \n",
+       "1               583.0  \n",
+       "2               260.0  \n",
+       "3              1038.0  \n",
+       "4               211.0  \n",
+       "5               357.0  \n",
+       "6              1304.0  \n",
+       "7              1328.0  \n",
+       "8              1377.0  \n",
+       "9               192.0  \n",
        "\n",
        "[10 rows x 22 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1533,24 +1542,30 @@
     "                                                         'product_title': 'mean'})\n",
     "\n",
     "df.reset_index(inplace=True)\n",
+    "df.columns = ['_'.join(temp).strip('_') for temp in df.columns.to_flat_index() ]\n",
     "df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fa599d5f-b80c-4639-8f10-a705de599931",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "347a1442-e25d-4122-b90c-0108cf1c37c7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2642"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df)"
+   ]
   },
   {
    "cell_type": "code",
