--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "52340eed-c2df-4992-989e-e179f8c19921",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "9ac0d41a-b3f1-4521-8db0-d1a521fb6d0d",
    "metadata": {},
    "outputs": [],
@@ -231,6 +231,10 @@
    "execution_count": 6,
    "id": "15354e8a-bb64-4fb2-a5f1-2a6978312437",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -1385,7 +1389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
