--- a/dfs_test.ipynb
+++ b/dfs_test.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3dca5788-545a-4d3a-87f2-b4c2ba593ed2",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "557ec4fb-084e-48ab-8265-f4f7d2e3624e",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
        "4            2  desktop    2014-01-01    13244 2012-04-15 23:31:04 1986-08-18  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "6ef61bfc-1b86-4f73-b631-fe87f4b140f3",
    "metadata": {},
    "outputs": [
@@ -256,7 +256,7 @@
        "4          5     A"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "c09b954e-3479-42b9-a4f6-e9b072573427",
    "metadata": {},
    "outputs": [],
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "3a8529e4-31cc-4e9d-b435-c4786298c378",
    "metadata": {},
    "outputs": [
@@ -372,10 +372,10 @@
        "</svg>\r\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x232903377f0>"
+       "<graphviz.dot.Digraph at 0x291d86539d0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "835e838b-7538-4df0-b3bb-d9faa810c3ea",
    "metadata": {},
    "outputs": [
@@ -481,7 +481,7 @@
        "birthday             Datetime              []"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "cb96aa00-32b5-4905-947b-d527a9f3202a",
    "metadata": {},
    "outputs": [
@@ -539,10 +539,10 @@
        "</svg>\r\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x232906f03d0>"
+       "<graphviz.dot.Digraph at 0x291d868f3a0>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "cc4ea67c-f20f-4595-b38a-b238e90644e0",
    "metadata": {},
    "outputs": [
@@ -619,10 +619,10 @@
        "</svg>\r\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x2329067e940>"
+       "<graphviz.dot.Digraph at 0x291d86e09a0>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "a5a0100d-7985-43e1-a032-368bb03b206a",
    "metadata": {},
    "outputs": [
@@ -700,10 +700,10 @@
        "</svg>\r\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x23291a1d5e0>"
+       "<graphviz.dot.Digraph at 0x291d274f610>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "1589d8c5-32cd-4c00-a3ed-1cbffb712119",
    "metadata": {},
    "outputs": [
@@ -806,10 +806,10 @@
        "</svg>\r\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x23291952d30>"
+       "<graphviz.dot.Digraph at 0x291d8730880>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "d3cb48f0-f753-47b7-816e-0a89a858802f",
    "metadata": {},
    "outputs": [
@@ -1158,7 +1158,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1168,6 +1168,365 @@
     "\n",
     "feature_matrix"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4beb6cc-c5ab-4e58-83b8-6ce105d20750",
+   "metadata": {},
+   "source": [
+    "https://featuretools.alteryx.com/en/stable/getting_started/afe.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "2ab380c5-ab82-4a17-ac65-b7af6771fa42",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>zip_code</th>\n",
+       "      <th>COUNT(sessions)</th>\n",
+       "      <th>MONTH(join_date)</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>customer_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>60091</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>60091</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>60091</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>13244</td>\n",
+       "      <td>6</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>13244</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            zip_code  COUNT(sessions) MONTH(join_date)\n",
+       "customer_id                                           \n",
+       "5              60091                6                7\n",
+       "4              60091                8                4\n",
+       "1              60091                8                4\n",
+       "3              13244                6                8\n",
+       "2              13244                7                4"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature_matrix, feature_defs = ft.dfs(entityset=es,\n",
+    "                                      target_dataframe_name=\"customers\",\n",
+    "                                      agg_primitives=[\"count\"],\n",
+    "                                      trans_primitives=[\"month\"],\n",
+    "                                      max_depth=1)\n",
+    "feature_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f0c2e20a-0f13-43a8-a21b-329dd24a6842",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>zip_code</th>\n",
+       "      <th>MODE(sessions.device)</th>\n",
+       "      <th>MEAN(transactions.amount)</th>\n",
+       "      <th>MODE(transactions.product_id)</th>\n",
+       "      <th>SUM(transactions.amount)</th>\n",
+       "      <th>HOUR(join_date)</th>\n",
+       "      <th>MONTH(join_date)</th>\n",
+       "      <th>MEAN(sessions.MEAN(transactions.amount))</th>\n",
+       "      <th>MEAN(sessions.SUM(transactions.amount))</th>\n",
+       "      <th>MODE(sessions.HOUR(session_start))</th>\n",
+       "      <th>MODE(sessions.MODE(transactions.product_id))</th>\n",
+       "      <th>MODE(sessions.MONTH(session_start))</th>\n",
+       "      <th>SUM(sessions.MEAN(transactions.amount))</th>\n",
+       "      <th>MODE(transactions.sessions.device)</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>customer_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>60091</td>\n",
+       "      <td>mobile</td>\n",
+       "      <td>80.375443</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6349.66</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>78.705187</td>\n",
+       "      <td>1058.276667</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>472.231119</td>\n",
+       "      <td>mobile</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>60091</td>\n",
+       "      <td>mobile</td>\n",
+       "      <td>80.070459</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8727.68</td>\n",
+       "      <td>20</td>\n",
+       "      <td>4</td>\n",
+       "      <td>81.207189</td>\n",
+       "      <td>1090.960000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>649.657515</td>\n",
+       "      <td>mobile</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>60091</td>\n",
+       "      <td>mobile</td>\n",
+       "      <td>71.631905</td>\n",
+       "      <td>4</td>\n",
+       "      <td>9025.62</td>\n",
+       "      <td>10</td>\n",
+       "      <td>4</td>\n",
+       "      <td>72.774140</td>\n",
+       "      <td>1128.202500</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>582.193117</td>\n",
+       "      <td>mobile</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>13244</td>\n",
+       "      <td>desktop</td>\n",
+       "      <td>67.060430</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6236.62</td>\n",
+       "      <td>15</td>\n",
+       "      <td>8</td>\n",
+       "      <td>67.539577</td>\n",
+       "      <td>1039.436667</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>405.237462</td>\n",
+       "      <td>desktop</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>13244</td>\n",
+       "      <td>desktop</td>\n",
+       "      <td>77.422366</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7200.28</td>\n",
+       "      <td>23</td>\n",
+       "      <td>4</td>\n",
+       "      <td>78.415122</td>\n",
+       "      <td>1028.611429</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>548.905851</td>\n",
+       "      <td>desktop</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            zip_code MODE(sessions.device)  MEAN(transactions.amount)  \\\n",
+       "customer_id                                                             \n",
+       "5              60091                mobile                  80.375443   \n",
+       "4              60091                mobile                  80.070459   \n",
+       "1              60091                mobile                  71.631905   \n",
+       "3              13244               desktop                  67.060430   \n",
+       "2              13244               desktop                  77.422366   \n",
+       "\n",
+       "            MODE(transactions.product_id)  SUM(transactions.amount)  \\\n",
+       "customer_id                                                           \n",
+       "5                                       5                   6349.66   \n",
+       "4                                       2                   8727.68   \n",
+       "1                                       4                   9025.62   \n",
+       "3                                       1                   6236.62   \n",
+       "2                                       4                   7200.28   \n",
+       "\n",
+       "            HOUR(join_date) MONTH(join_date)  \\\n",
+       "customer_id                                    \n",
+       "5                         5                7   \n",
+       "4                        20                4   \n",
+       "1                        10                4   \n",
+       "3                        15                8   \n",
+       "2                        23                4   \n",
+       "\n",
+       "             MEAN(sessions.MEAN(transactions.amount))  \\\n",
+       "customer_id                                             \n",
+       "5                                           78.705187   \n",
+       "4                                           81.207189   \n",
+       "1                                           72.774140   \n",
+       "3                                           67.539577   \n",
+       "2                                           78.415122   \n",
+       "\n",
+       "             MEAN(sessions.SUM(transactions.amount))  \\\n",
+       "customer_id                                            \n",
+       "5                                        1058.276667   \n",
+       "4                                        1090.960000   \n",
+       "1                                        1128.202500   \n",
+       "3                                        1039.436667   \n",
+       "2                                        1028.611429   \n",
+       "\n",
+       "            MODE(sessions.HOUR(session_start))  \\\n",
+       "customer_id                                      \n",
+       "5                                            0   \n",
+       "4                                            1   \n",
+       "1                                            6   \n",
+       "3                                            5   \n",
+       "2                                            3   \n",
+       "\n",
+       "            MODE(sessions.MODE(transactions.product_id))  \\\n",
+       "customer_id                                                \n",
+       "5                                                      3   \n",
+       "4                                                      1   \n",
+       "1                                                      4   \n",
+       "3                                                      1   \n",
+       "2                                                      3   \n",
+       "\n",
+       "            MODE(sessions.MONTH(session_start))  \\\n",
+       "customer_id                                       \n",
+       "5                                             1   \n",
+       "4                                             1   \n",
+       "1                                             1   \n",
+       "3                                             1   \n",
+       "2                                             1   \n",
+       "\n",
+       "             SUM(sessions.MEAN(transactions.amount))  \\\n",
+       "customer_id                                            \n",
+       "5                                         472.231119   \n",
+       "4                                         649.657515   \n",
+       "1                                         582.193117   \n",
+       "3                                         405.237462   \n",
+       "2                                         548.905851   \n",
+       "\n",
+       "            MODE(transactions.sessions.device)  \n",
+       "customer_id                                     \n",
+       "5                                       mobile  \n",
+       "4                                       mobile  \n",
+       "1                                       mobile  \n",
+       "3                                      desktop  \n",
+       "2                                      desktop  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature_matrix, feature_defs = ft.dfs(entityset=es,\n",
+    "                                      target_dataframe_name=\"customers\",\n",
+    "                                      agg_primitives=[\"mean\", \"sum\", \"mode\"],\n",
+    "                                      trans_primitives=[\"month\", \"hour\"],\n",
+    "                                      max_depth=2)\n",
+    "feature_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85a1a0bb-1c76-463b-8331-2103c170a8ad",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
