Create EntitySet NC

--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -1368,7 +1368,7 @@
    "id": "cbe1406e-b027-4cbb-bc98-37f41ee345f5",
    "metadata": {},
    "source": [
-    "The chosen method of feature engineering is Deep Feature Synthesis. It is an algorithm that allows you to automatically generate features in relational data sets. The algorithm follows the relationships in the data set and creates new features based on these relationships. Due to the fact that features are created with the help of previously created ones, each feature has a given depth."
+    "The chosen method of feature engineering is Deep Feature Synthesis. It is an algorithm that allows you to automatically generate features in relational data sets. The algorithm follows the relationships in the data set and creates new features based on these relationships. Due to the fact that features are created with the help of previously created ones, each feature has a given depth. For more information head over to the [official documentation](https://featuretools.alteryx.com/en/stable/getting_started/afe.html)."
    ]
   },
   {
@@ -1397,12 +1397,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 53,
    "id": "2ab8424a-73c6-40bd-aeee-fee95c0f1e66",
    "metadata": {},
    "outputs": [],
    "source": [
-    "es = ft.EntitySet(id=PARTNER_ID)"
+    "es1 = ft.EntitySet(id=PARTNER_ID)"
    ]
   },
   {
@@ -1415,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "ace624f8-66b0-4328-a107-c7ca40a5f4e3",
    "metadata": {},
    "outputs": [],
@@ -1423,7 +1423,7 @@
     "# Products\n",
     "# Each of the products has a price.\n",
     "PRODUCT_INFO_NC = ['product_id', 'product_price']\n",
-    "df_products_nc = df_raw_encoded[PRODUCT_INFO_NC]\n",
+    "df_products_nc = df_nans_encoded[PRODUCT_INFO_NC]\n",
     "df_products_nc.drop_duplicates(subset=['product_id'], inplace=True)\n",
     "\n",
     "# Days\n",
@@ -1431,51 +1431,217 @@
     "# average and total revenue,\n",
     "# average and total waiting time,\n",
     "# average and total value of sold products\n",
-    "df_days_nc = df_raw_encoded.groupby('day').agg({'Sale': 'size',\n",
-    "                                     'SalesAmountInEuro': ['mean', 'sum'],\n",
-    "                                     'time_delay_for_conversion': ['mean', 'sum'],\n",
-    "                                     'product_price': ['mean', 'sum']})\n",
-    "\n",
+    "df_days_nc = df_nans_encoded.groupby('day').agg({'Sale': 'size',\n",
+    "                                                'SalesAmountInEuro': ['mean', 'sum'],\n",
+    "                                                'time_delay_for_conversion': ['mean', 'sum'],\n",
+    "                                                'product_price': ['mean', 'sum']})\n",
     "df_days_nc.columns = ['_'.join(temp).strip('_') for temp in df_days_nc.columns.to_flat_index()]\n",
     "df_days_nc.reset_index(inplace=True)\n",
     "\n",
-    "# users\n",
-    "df_users_nc = df_raw_encoded.groupby('user_id').agg({'Sale': 'size',\n",
-    "                                         'SalesAmountInEuro': ['mean', 'sum'],\n",
-    "                                         'time_delay_for_conversion': ['mean', 'sum'],\n",
-    "                                         'product_price': ['mean', 'sum']})\n",
-    "\n",
+    "# Users\n",
+    "# Each user has the total number of purchased goods,\n",
+    "# average and total revenue,\n",
+    "# average and total waiting time,\n",
+    "# average and total value of sold products\n",
+    "df_users_nc = df_nans_encoded.groupby('user_id').agg({'Sale': 'size',\n",
+    "                                                     'SalesAmountInEuro': ['mean', 'sum'],\n",
+    "                                                     'time_delay_for_conversion': ['mean', 'sum'],\n",
+    "                                                     'product_price': ['mean', 'sum']})\n",
     "df_users_nc.columns = ['_'.join(temp).strip('_') for temp in df_users_nc.columns.to_flat_index()]\n",
     "df_users_nc.reset_index(inplace=True)\n",
     "\n",
-    "# transactions\n",
-    "df_transactions_nc = df_raw_encoded[['day', 'product_id', 'user_id', 'SalesAmountInEuro', 'time_delay_for_conversion',\n",
-    "                          'click_timestamp', 'nb_clicks_1week']]\n",
+    "# Transactions\n",
+    "# Each transaction has a day,\n",
+    "# product id,\n",
+    "# user id,\n",
+    "# revenue generated,\n",
+    "# waiting time,\n",
+    "# exact click time,\n",
+    "# average number of clicks for this product per week\n",
+    "df_transactions_nc = df_nans_encoded[['day', 'product_id', 'user_id',\n",
+    "                                     'SalesAmountInEuro', 'time_delay_for_conversion',\n",
+    "                                     'click_timestamp', 'nb_clicks_1week']]\n",
     "df_transactions_nc['transaction_id'] = np.arange(1, len(df_transactions_nc)+1)\n",
     "\n",
-    "# pairs\n",
-    "df_days_products_nc = df_raw_encoded.groupby(['day', 'product_id']).agg({'Sale': 'size', 'SalesAmountInEuro': 'sum'})\n",
-    "\n",
+    "# Pairs\n",
+    "# Clicks for a given product on a given day have been collected in dataset pairs.\n",
+    "# The number of such events and the total purchase revenue were calculated for each line.\n",
+    "df_days_products_nc = df_nans_encoded.groupby(['day', 'product_id']).agg({'Sale': 'size', 'SalesAmountInEuro': 'sum'})\n",
     "df_days_products_nc.rename({'Sale': 'number_of_sales', 'SalesAmountInEuro': 'SalesAmountInEuro_sum'}, axis=1, inplace=True)\n",
     "df_days_products_nc['pair_id'] = np.arange(1, len(df_days_products_nc)+1)\n",
     "df_days_products_nc.reset_index(inplace=True)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ef25154d-1ccb-4873-b77a-80ccc8980ba4",
+   "cell_type": "markdown",
+   "id": "04545a00-df50-4c01-b816-44f3e9acb498",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Now that we have created the appropriate datasets, we are ready to merge them into an EntitySet."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "980a9814-7c48-447f-a972-760f1dce475f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"?>\r\n",
+       "<!DOCTYPE svg PUBLIC \"-//W3C//DTD SVG 1.1//EN\"\r\n",
+       " \"http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd\">\r\n",
+       "<!-- Generated by graphviz version 2.38.0 (20140413.2041)\r\n",
+       " -->\r\n",
+       "<!-- Title: BD01BAFAE73CF38C403978BBB458300C Pages: 1 -->\r\n",
+       "<svg width=\"723pt\" height=\"348pt\"\r\n",
+       " viewBox=\"0.00 0.00 723.00 348.00\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\r\n",
+       "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 344)\">\r\n",
+       "<title>BD01BAFAE73CF38C403978BBB458300C</title>\r\n",
+       "<polygon fill=\"white\" stroke=\"none\" points=\"-4,4 -4,-344 719,-344 719,4 -4,4\"/>\r\n",
+       "<!-- transactions -->\r\n",
+       "<g id=\"node1\" class=\"node\"><title>transactions</title>\r\n",
+       "<polygon fill=\"none\" stroke=\"black\" points=\"252,-188.5 252,-339.5 473,-339.5 473,-188.5 252,-188.5\"/>\r\n",
+       "<text text-anchor=\"middle\" x=\"362.5\" y=\"-324.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">transactions (5326 rows)</text>\r\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"252,-316.5 473,-316.5 \"/>\r\n",
+       "<text text-anchor=\"start\" x=\"260\" y=\"-301.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">day : Datetime; foreign_key</text>\r\n",
+       "<text text-anchor=\"start\" x=\"260\" y=\"-286.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">product_id : Integer; foreign_key</text>\r\n",
+       "<text text-anchor=\"start\" x=\"260\" y=\"-271.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">user_id : Integer; foreign_key</text>\r\n",
+       "<text text-anchor=\"start\" x=\"260\" y=\"-256.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">SalesAmountInEuro : Double</text>\r\n",
+       "<text text-anchor=\"start\" x=\"260\" y=\"-241.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">time_delay_for_conversion : Double</text>\r\n",
+       "<text text-anchor=\"start\" x=\"260\" y=\"-226.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">click_timestamp : Datetime</text>\r\n",
+       "<text text-anchor=\"start\" x=\"260\" y=\"-211.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">nb_clicks_1week : Double</text>\r\n",
+       "<text text-anchor=\"start\" x=\"260\" y=\"-196.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">transaction_id : Integer; index</text>\r\n",
+       "</g>\r\n",
+       "<!-- products -->\r\n",
+       "<g id=\"node2\" class=\"node\"><title>products</title>\r\n",
+       "<polygon fill=\"none\" stroke=\"black\" points=\"275,-45.5 275,-106.5 440,-106.5 440,-45.5 275,-45.5\"/>\r\n",
+       "<text text-anchor=\"middle\" x=\"357.5\" y=\"-91.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">products (2409 rows)</text>\r\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"275,-83.5 440,-83.5 \"/>\r\n",
+       "<text text-anchor=\"start\" x=\"283\" y=\"-68.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">product_id : Integer; index</text>\r\n",
+       "<text text-anchor=\"start\" x=\"283\" y=\"-53.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">product_price : Double</text>\r\n",
+       "</g>\r\n",
+       "<!-- transactions&#45;&gt;products -->\r\n",
+       "<g id=\"edge1\" class=\"edge\"><title>transactions&#45;&gt;products</title>\r\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M385,-188.346C385,-188.346 385,-116.699 385,-116.699\"/>\r\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"388.5,-116.699 385,-106.699 381.5,-116.699 388.5,-116.699\"/>\r\n",
+       "<text text-anchor=\"middle\" x=\"353.5\" y=\"-156.323\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">product_id</text>\r\n",
+       "</g>\r\n",
+       "<!-- users -->\r\n",
+       "<g id=\"node3\" class=\"node\"><title>users</title>\r\n",
+       "<polygon fill=\"none\" stroke=\"black\" points=\"458,-0.5 458,-151.5 715,-151.5 715,-0.5 458,-0.5\"/>\r\n",
+       "<text text-anchor=\"middle\" x=\"586.5\" y=\"-136.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">users (2515 rows)</text>\r\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"458,-128.5 715,-128.5 \"/>\r\n",
+       "<text text-anchor=\"start\" x=\"466\" y=\"-113.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">user_id : Integer; index</text>\r\n",
+       "<text text-anchor=\"start\" x=\"466\" y=\"-98.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Sale_size : Integer</text>\r\n",
+       "<text text-anchor=\"start\" x=\"466\" y=\"-83.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">SalesAmountInEuro_mean : Double</text>\r\n",
+       "<text text-anchor=\"start\" x=\"466\" y=\"-68.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">SalesAmountInEuro_sum : Double</text>\r\n",
+       "<text text-anchor=\"start\" x=\"466\" y=\"-53.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">time_delay_for_conversion_mean : Double</text>\r\n",
+       "<text text-anchor=\"start\" x=\"466\" y=\"-38.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">time_delay_for_conversion_sum : Double</text>\r\n",
+       "<text text-anchor=\"start\" x=\"466\" y=\"-23.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">product_price_mean : Double</text>\r\n",
+       "<text text-anchor=\"start\" x=\"466\" y=\"-8.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">product_price_sum : Double</text>\r\n",
+       "</g>\r\n",
+       "<!-- transactions&#45;&gt;users -->\r\n",
+       "<g id=\"edge2\" class=\"edge\"><title>transactions&#45;&gt;users</title>\r\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M465.5,-188.346C465.5,-188.346 465.5,-161.805 465.5,-161.805\"/>\r\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"469,-161.805 465.5,-151.805 462,-161.805 469,-161.805\"/>\r\n",
+       "<text text-anchor=\"middle\" x=\"444.5\" y=\"-163.876\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">user_id</text>\r\n",
+       "</g>\r\n",
+       "<!-- days -->\r\n",
+       "<g id=\"node4\" class=\"node\"><title>days</title>\r\n",
+       "<polygon fill=\"none\" stroke=\"black\" points=\"0,-0.5 0,-151.5 257,-151.5 257,-0.5 0,-0.5\"/>\r\n",
+       "<text text-anchor=\"middle\" x=\"128.5\" y=\"-136.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">days (91 rows)</text>\r\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"0,-128.5 257,-128.5 \"/>\r\n",
+       "<text text-anchor=\"start\" x=\"8\" y=\"-113.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">day : Datetime; index</text>\r\n",
+       "<text text-anchor=\"start\" x=\"8\" y=\"-98.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">Sale_size : Integer</text>\r\n",
+       "<text text-anchor=\"start\" x=\"8\" y=\"-83.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">SalesAmountInEuro_mean : Double</text>\r\n",
+       "<text text-anchor=\"start\" x=\"8\" y=\"-68.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">SalesAmountInEuro_sum : Double</text>\r\n",
+       "<text text-anchor=\"start\" x=\"8\" y=\"-53.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">time_delay_for_conversion_mean : Double</text>\r\n",
+       "<text text-anchor=\"start\" x=\"8\" y=\"-38.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">time_delay_for_conversion_sum : Double</text>\r\n",
+       "<text text-anchor=\"start\" x=\"8\" y=\"-23.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">product_price_mean : Double</text>\r\n",
+       "<text text-anchor=\"start\" x=\"8\" y=\"-8.3\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">product_price_sum : Double</text>\r\n",
+       "</g>\r\n",
+       "<!-- transactions&#45;&gt;days -->\r\n",
+       "<g id=\"edge3\" class=\"edge\"><title>transactions&#45;&gt;days</title>\r\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M251.982,-199C246.372,-199 243,-199 243,-199 243,-199 243,-161.797 243,-161.797\"/>\r\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"246.5,-161.797 243,-151.797 239.5,-161.797 246.5,-161.797\"/>\r\n",
+       "<text text-anchor=\"middle\" x=\"232.5\" y=\"-188.689\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">day</text>\r\n",
+       "</g>\r\n",
+       "<!-- pairs -->\r\n",
+       "<g id=\"node5\" class=\"node\"><title>pairs</title>\r\n",
+       "<polygon fill=\"none\" stroke=\"black\" points=\"23,-211 23,-317 234,-317 234,-211 23,-211\"/>\r\n",
+       "<text text-anchor=\"middle\" x=\"128.5\" y=\"-301.8\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">pairs (2642 rows)</text>\r\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"23,-294 234,-294 \"/>\r\n",
+       "<text text-anchor=\"start\" x=\"31\" y=\"-278.8\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">day : Datetime; foreign_key</text>\r\n",
+       "<text text-anchor=\"start\" x=\"31\" y=\"-263.8\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">product_id : Integer; foreign_key</text>\r\n",
+       "<text text-anchor=\"start\" x=\"31\" y=\"-248.8\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">number_of_sales : Integer</text>\r\n",
+       "<text text-anchor=\"start\" x=\"31\" y=\"-233.8\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">SalesAmountInEuro_sum : Double</text>\r\n",
+       "<text text-anchor=\"start\" x=\"31\" y=\"-218.8\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">pair_id : Integer; index</text>\r\n",
+       "</g>\r\n",
+       "<!-- pairs&#45;&gt;products -->\r\n",
+       "<g id=\"edge5\" class=\"edge\"><title>pairs&#45;&gt;products</title>\r\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M163.667,-210.956C163.667,-189.634 163.667,-170 163.667,-170 163.667,-170 330,-170 330,-170 330,-170 330,-116.519 330,-116.519\"/>\r\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"333.5,-116.519 330,-106.519 326.5,-116.519 333.5,-116.519\"/>\r\n",
+       "<text text-anchor=\"middle\" x=\"221.596\" y=\"-158.8\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">product_id</text>\r\n",
+       "</g>\r\n",
+       "<!-- pairs&#45;&gt;days -->\r\n",
+       "<g id=\"edge4\" class=\"edge\"><title>pairs&#45;&gt;days</title>\r\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M93.3333,-210.881C93.3333,-210.881 93.3333,-161.789 93.3333,-161.789\"/>\r\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"96.8334,-161.789 93.3333,-151.789 89.8334,-161.789 96.8334,-161.789\"/>\r\n",
+       "<text text-anchor=\"middle\" x=\"82.8333\" y=\"-190.135\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">day</text>\r\n",
+       "</g>\r\n",
+       "</g>\r\n",
+       "</svg>\r\n"
+      ],
+      "text/plain": [
+       "<graphviz.dot.Digraph at 0x1925c544ac0>"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "es1 = es1.add_dataframe(\n",
+    "    dataframe_name=\"transactions\",\n",
+    "    dataframe=df_transactions_nc,\n",
+    "    index=\"transaction_id\", # The index parameter specifies the column that uniquely identifies rows in the dataframe\n",
+    ")\n",
+    "\n",
+    "es1 = es1.add_dataframe(\n",
+    "    dataframe_name=\"products\",\n",
+    "    dataframe=df_products_nc,\n",
+    "    index=\"product_id\",\n",
+    ")\n",
+    "\n",
+    "es1 = es1.add_dataframe(\n",
+    "    dataframe_name=\"users\",\n",
+    "    dataframe=df_users_nc,\n",
+    "    index='user_id'\n",
+    ")\n",
+    "\n",
+    "es1 = es1.add_dataframe(\n",
+    "    dataframe_name=\"days\",\n",
+    "    dataframe=df_days_nc,\n",
+    "    index='day'\n",
+    ")\n",
+    "\n",
+    "es1 = es1.add_dataframe(\n",
+    "    dataframe_name=\"pairs\",\n",
+    "    dataframe=df_days_products_nc,\n",
+    "    index='pair_id'\n",
+    ")\n",
+    "\n",
+    "es1 = es1.add_relationship(\"products\", \"product_id\", \"transactions\", \"product_id\")\n",
+    "es1 = es1.add_relationship(\"users\", \"user_id\", \"transactions\", \"user_id\")\n",
+    "es1 = es1.add_relationship(\"days\", \"day\", \"transactions\", \"day\")\n",
+    "es1 = es1.add_relationship(\"days\", \"day\", \"pairs\", \"day\")\n",
+    "es1 = es1.add_relationship(\"products\", \"product_id\", \"pairs\", \"product_id\")\n",
+    "\n",
+    "es1.plot()"
+   ]
   },
   {
    "cell_type": "code",
