--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -9,18 +9,18 @@
     "\n",
     "## WHAT IS THIS NOTEBOOK ABOUT\n",
     "\n",
-    "This notebook presents EDA (Exploratory Data Analysis), elements of feature engineering and correlation test of the \"CRITEO SPONSORED SEARCH CONVERSION LOG DATASET\"\n",
+    "This notebook presents EDA (Exploratory Data Analysis), elements of feature engineering and statistical testing of the \"CRITEO SPONSORED SEARCH CONVERSION LOG DATASET\"\n",
     "\n",
     "## CONTENTS\n",
     "\n",
-    "1. INTRODUCTION\n",
-    "2. EXPLORATORY DATA ANALYSIS\n",
-    "3. TESTING HYPOTHESES\n",
-    "4. FEATURE ENGINEERING\n",
-    "5. STATISTICAL TESTING OF DESCRIBING FEATURES\n",
-    "6. COMPETITION METRIC\n",
-    "7. SUMMARY\n",
-    "8. LITERATURE\n"
+    "1. [INTRODUCTION](#1.-INTRODUCTION)\n",
+    "2. [EXPLORATORY DATA ANALYSIS](#2.-EXPLORATORY-DATA-ANALYSIS)\n",
+    "3. [TESTING HYPOTHESES](#3.-TESTING-HYPOTHESES)\n",
+    "4. [FEATURE ENGINEERING](#4.-FEATURE-ENGINEERING)\n",
+    "5. [STATISTICAL TESTING OF DESCRIBING FEATURES](#5.-STATISTICAL-TESTING-OF-DESCRIBING-FEATURES)\n",
+    "6. [COMPETITION METRIC](#6.-COMPETITION-METRIC)\n",
+    "7. [SUMMARY](#7.-SUMMARY)\n",
+    "8. [LITERATURE](#8.-LITERATURE)\n"
    ]
   },
   {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "id": "52340eed-c2df-4992-989e-e179f8c19921",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "9ac0d41a-b3f1-4521-8db0-d1a521fb6d0d",
    "metadata": {},
    "outputs": [],
@@ -154,10 +154,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b18d113b-675e-422a-b1ed-463a323ae1f5",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "File \u001b[1;32mN:\\JupyterNotebooks\\CriteoSearch\\Criteo-Search-Data\\create_csv_file.py:12\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m ALL_COLUMN_NAMES \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSale\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSalesAmountInEuro\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtime_delay_for_conversion\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mclick_timestamp\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m      4\u001b[0m                     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnb_clicks_1week\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mproduct_price\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mproduct_age_group\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdevice_type\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m      5\u001b[0m                     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mproduct_gender\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mproduct_brand\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mproduct_category(1)\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mproduct_category(2)\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m      6\u001b[0m                     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mproduct_category(3)\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mproduct_category(4)\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mproduct_category(5)\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m      7\u001b[0m                     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mproduct_category(6)\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mproduct_category(7)\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mproduct_country\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mproduct_id\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m      8\u001b[0m                     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mproduct_title\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpartner_id\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124muser_id\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m     10\u001b[0m PARTNER_ID \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mC4D189327BD87FEB3BF896DA716C6995\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m---> 12\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241m.\u001b[39mDataFrame()\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m chunk \u001b[38;5;129;01min\u001b[39;00m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../CriteoSearchData\u001b[39m\u001b[38;5;124m\"\u001b[39m, names\u001b[38;5;241m=\u001b[39mALL_COLUMN_NAMES, sep\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m'\u001b[39m, low_memory\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, chunksize\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m100_000\u001b[39m):\n\u001b[0;32m     14\u001b[0m     filtered_chunk \u001b[38;5;241m=\u001b[39m chunk[chunk[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpartner_id\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m PARTNER_ID]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
    "source": [
     "%run create_csv_file.py"
    ]
@@ -172,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "f24fde75-b64d-42b8-8180-37e508cb3364",
    "metadata": {},
    "outputs": [],
@@ -208,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "2535cdfe-4c21-4a98-a3b9-16e5bdefcfda",
    "metadata": {},
    "outputs": [],
@@ -231,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "15354e8a-bb64-4fb2-a5f1-2a6978312437",
    "metadata": {
     "tags": []
@@ -289,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "12861f19-587b-48cc-afd7-925a49be7415",
    "metadata": {},
    "outputs": [
@@ -449,7 +467,7 @@
        "[3 rows x 21 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "id": "6e84c950-018a-49da-8060-69d0e47919e1",
    "metadata": {},
    "outputs": [
@@ -753,7 +771,7 @@
        "7            1417.817            23.630            0.985  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,9 +793,9 @@
     "df_eda.reset_index(inplace=True)\n",
     "df_eda.columns = ['_'.join(temp).strip('_') for temp in df_eda.columns.to_flat_index()]\n",
     "df_eda.dropna(subset=['time_delay_for_conversion_mean'], inplace=True)\n",
-    "df_eda['time_delay_minutes'] = df.time_delay_for_conversion_mean / 60\n",
-    "df_eda['time_delay_hours'] = df.time_delay_minutes / 60\n",
-    "df_eda['time_delay_days'] = df.time_delay_hours / 24\n",
+    "df_eda['time_delay_minutes'] = df_eda.time_delay_for_conversion_mean / 60\n",
+    "df_eda['time_delay_hours'] = df_eda.time_delay_minutes / 60\n",
+    "df_eda['time_delay_days'] = df_eda.time_delay_hours / 24\n",
     "df_eda.head(8)"
    ]
   },
@@ -804,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "id": "b913c09f-2a57-47d0-9925-e3686c8f6b6f",
    "metadata": {},
    "outputs": [
@@ -901,7 +919,7 @@
        "IQR                   78.000"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -954,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "id": "b10da31c-3fd1-483e-a25a-8914f872d3d0",
    "metadata": {},
    "outputs": [
@@ -990,7 +1008,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1010,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "id": "af7f7b6e-3a42-4626-bc10-c66a80cb1160",
    "metadata": {},
    "outputs": [],
@@ -1028,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "id": "f817abd2-3d8e-470f-a999-6296263e6bfa",
    "metadata": {},
    "outputs": [
@@ -1074,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "id": "6afcb4d3-5af1-46f4-b0e7-b473f925f56d",
    "metadata": {},
    "outputs": [
@@ -1117,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "id": "6cdeabcb-d0ec-4b14-8049-43c25654c5b7",
    "metadata": {},
    "outputs": [
@@ -1187,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "id": "bd1eb62a-d378-46a6-8f5d-51149041c880",
    "metadata": {},
    "outputs": [
@@ -1230,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "id": "7ffe5a16-9683-41ac-83d1-761f9f0fad75",
    "metadata": {},
    "outputs": [
@@ -1292,29 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "b8a53c22-afa8-4f61-aee0-fe3f8254f564",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ShapiroResult(statistic=0.7217172384262085, pvalue=2.664428900067207e-41)"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "shapiro(sample_1)\n",
-    "shapiro(sample_2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "d8511fea-73a4-4cfe-b5e1-dde5825136a9",
    "metadata": {},
    "outputs": [
@@ -1329,8 +1325,8 @@
    ],
    "source": [
     "alpha = 0.05\n",
-    "df_sample_1 = df[df['day'] < dt.date(2020, 9, 16)]\n",
-    "df_sample_2 = df[df['day'] >= dt.date(2020, 9, 16)]\n",
+    "df_sample_1 = df_eda[df_eda['day'] < dt.date(2020, 9, 16)]\n",
+    "df_sample_2 = df_eda[df_eda['day'] >= dt.date(2020, 9, 16)]\n",
     "\n",
     "sample_1 = df_sample_1.product_price_mean\n",
     "sample_2 = df_sample_2.product_price_mean\n",
@@ -1397,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 25,
    "id": "2ab8424a-73c6-40bd-aeee-fee95c0f1e66",
    "metadata": {},
    "outputs": [],
@@ -1415,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 26,
    "id": "ace624f8-66b0-4328-a107-c7ca40a5f4e3",
    "metadata": {},
    "outputs": [],
@@ -1482,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 27,
    "id": "980a9814-7c48-447f-a972-760f1dce475f",
    "metadata": {},
    "outputs": [
@@ -1595,10 +1591,10 @@
        "</svg>\r\n"
       ],
       "text/plain": [
-       "<graphviz.dot.Digraph at 0x1925c544ac0>"
+       "<graphviz.dot.Digraph at 0x244ac180ca0>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1645,6 +1641,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bf993f60-e638-4ec3-bb37-d6ce25ab1aa1",
+   "metadata": {},
+   "source": [
+    "## DFS for EntitySet without categorical features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2edb7c22-4289-4961-8c41-1b17423f7203",
    "metadata": {},
    "source": [
@@ -1657,7 +1661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 28,
    "id": "3eb50a46-3e63-4af5-9b2d-fb50eee93000",
    "metadata": {},
    "outputs": [
@@ -1665,8 +1669,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 18.4 s\n",
-      "Wall time: 18.4 s\n"
+      "CPU times: total: 18.2 s\n",
+      "Wall time: 18.3 s\n"
      ]
     },
     {
@@ -2193,7 +2197,7 @@
        "[2642 rows x 645 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2207,33 +2211,85 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cf6b4abb-3b81-46db-b0ff-8da6432d53dd",
+   "cell_type": "markdown",
+   "id": "58052c46-0fd1-4692-9588-429b6f11d0e0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Let's save the created feature_matrix to a csv file."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "3eba41ed-0f7d-4595-8f63-55b66ecd58a6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "feature_matrix.to_csv(f'FeatureMatrixNoCategorical_{PARTNER_ID}.csv')"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a86cfb06-abe2-46d5-bc27-42b93386c873",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "id": "0530249e-96ab-4d60-8742-f846872506f8",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Create EntitySet with categorical features"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "10cf7be2-ee5e-4ba5-9a44-cca74d50eddb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f58ad8f-74ef-4247-b7d4-1d27479c3cc6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f7023ef-485b-4035-9204-835a7f07b3f2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "314e43f7-cd97-4404-8982-6043aaea0d1f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "917d5149-ba02-46ae-b27b-4f27910eb7de",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a42daeaa-281e-4c63-81db-c6425a04623b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98a26aa0-6397-4333-99ff-9a831d196577",
    "metadata": {},
    "outputs": [],
    "source": []
